# article_extractor

./: README.md  pyproject.toml
data/: questions.txt
src/extractor/: bot.py  fastSum.py  main.py  scrap.py
